[gd_scene load_steps=6 format=3 uid="uid://cjk88n4luj0va"]

[ext_resource type="Script" path="res://Scenes/Menus/menu_main.gd" id="1_ddcqc"]
[ext_resource type="Texture2D" uid="uid://ctahdtrvwvadd" path="res://Assets/ColorBG.png" id="2_qlf7o"]
[ext_resource type="Texture2D" uid="uid://bic8ay2r577y6" path="res://Assets/Cube.png" id="3_n0l3a"]

[sub_resource type="CanvasTexture" id="CanvasTexture_tuhgx"]
diffuse_texture = ExtResource("2_qlf7o")

[sub_resource type="Theme" id="Theme_jdxsw"]
default_font_size = 7

[node name="MenuMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ddcqc")

[node name="MarginContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = SubResource("CanvasTexture_tuhgx")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -109.0
offset_right = 142.0
offset_bottom = -13.0
grow_vertical = 0
alignment = 1

[node name="Play" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_jdxsw")
text = "Play!"

[node name="Controls" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_jdxsw")
text = "Controls"

[node name="Settings" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_jdxsw")
text = "Settings"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_jdxsw")
text = "Quit Game"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 14.0
offset_right = 160.0
offset_bottom = 64.0
texture = ExtResource("3_n0l3a")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -90.0
offset_bottom = 90.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_n0l3a")

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
